objects/Call_Quality_Concern__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Quality Concerns</relationshipLabel>
        <relationshipName>Call_Quality_Concerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Action__c</fullName>
        <formula>if(
and(
not(isblank( Numbers_to_be_blacklisted__c )),
isblank( Callers_are_Often_Calling_For__c )),
"Blacklist",
if(
and(
ispickval( Calls_for_Wrong_Business__c , "Are many of the calls for the Same Business"),
not(isblank( Callers_are_Often_Calling_For__c ))),
"Reprovision #s",
if(
or(
ispickval( Solicitor_Calls__c ,"Yes"),
ispickval( Hang_Up_Calls__c , "Yes"),
ispickval ( Out_of_Area_Calls__c ,"Yes"),
ispickval ( Wrong_Service__c ,"Yes"),
ispickval( Calls_for_Wrong_Business__c , "Is it All Different Businesses")),
"Pause Outlets",
if(
and(
not(isblank( Numbers_to_be_blacklisted__c )),
not(isblank( Callers_are_Often_Calling_For__c ))),
"Blacklist &amp; Reprovision #s",
"Other"))))</formula>
        <label>Call Quality Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Issue_Notes__c</fullName>
        <label>Call Quality Issue to MOPs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callers_are_Often_Calling_For__c</fullName>
        <label>Callers Are Often Calling For:</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Call Quality Concerns</relationshipLabel>
        <relationshipName>Call_Quality_Concerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <formula>text(Account_Name__r.Client_Type__c)</formula>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant_Channel__c</fullName>
        <formula>Account_Name__r.IMS_Rep_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Call_Tracking__c</fullName>
        <formula>TEXT(Account_Name__r.Custom_Call_TrackingPL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Call Tracking?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ask your manager to check this box if you need to escalate</inlineHelpText>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Example_Bad_Calls__c</fullName>
        <inlineHelpText>Can you point out some of the calls that have been bad?</inlineHelpText>
        <label>Example Bad Calls</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Call_Concern__c</fullName>
        <label>First Call Concern</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMS_Consultant__c</fullName>
        <label>IMS Consultant</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Approved_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approved Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numbers_to_be_blacklisted__c</fullName>
        <description>Any numbers that need to be blacklisted.</description>
        <inlineHelpText>List the numbers that you think should be blacklisted based upon your client's performance.</inlineHelpText>
        <label>Numbers to be Blacklisted</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <label>Resolution Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Quality_Concerns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Call_Concern__c</fullName>
        <label>Second Call Concern</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_T__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Re-provisioned</fullName>
                </value>
                <value>
                    <fullName>Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Outlet Paused</fullName>
                </value>
                <value>
                    <fullName>Sent to Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_for_Wrong_Business__c</fullName>
        <label>Calls for Wrong Business:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wrong_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Is it All Different Businesses</fullName>
                </value>
                <value>
                    <fullName>Are Many of the Calls for the Same Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_for_Wrong_Service__c</fullName>
        <inlineHelpText>Are these:
-many calls all for different services
-many calls for the wrong service but generally the same wrong service</inlineHelpText>
        <label>Calls for Wrong Service:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wrong_Service__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Calls for All Different Services</fullName>
                </value>
                <value>
                    <fullName>Multiple Calls for Consistently the Same Wrong Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hang_Up_Calls__c</fullName>
        <label>Hang Up Calls?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Pro_Member__c</fullName>
        <label>IT Pro Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albert</fullName>
                </value>
                <value>
                    <fullName>Antoney Selvaraj.R</fullName>
                </value>
                <value>
                    <fullName>Arun Sami</fullName>
                </value>
                <value>
                    <fullName>Azhagarasan</fullName>
                </value>
                <value>
                    <fullName>Bala Murugan</fullName>
                </value>
                <value>
                    <fullName>Bramma Giri</fullName>
                </value>
                <value>
                    <fullName>Chandra Sekar.S</fullName>
                </value>
                <value>
                    <fullName>Chenna Krishnan.C</fullName>
                </value>
                <value>
                    <fullName>Deepa</fullName>
                </value>
                <value>
                    <fullName>Dilip S</fullName>
                </value>
                <value>
                    <fullName>Dimalson</fullName>
                </value>
                <value>
                    <fullName>Dinesh Kumar</fullName>
                </value>
                <value>
                    <fullName>Dominic Sylvester</fullName>
                </value>
                <value>
                    <fullName>G.Ashok</fullName>
                </value>
                <value>
                    <fullName>Ganesan.M</fullName>
                </value>
                <value>
                    <fullName>Glenny Joseph</fullName>
                </value>
                <value>
                    <fullName>Gopala Krishnan</fullName>
                </value>
                <value>
                    <fullName>Gunasekar.T</fullName>
                </value>
                <value>
                    <fullName>Hari Prasath.T</fullName>
                </value>
                <value>
                    <fullName>Ibrahim Badusha B</fullName>
                </value>
                <value>
                    <fullName>Irshad Ahmed</fullName>
                </value>
                <value>
                    <fullName>Jagatha</fullName>
                </value>
                <value>
                    <fullName>John Paul</fullName>
                </value>
                <value>
                    <fullName>Joseph</fullName>
                </value>
                <value>
                    <fullName>Karpagam</fullName>
                </value>
                <value>
                    <fullName>Karthick K</fullName>
                </value>
                <value>
                    <fullName>M.Karthick</fullName>
                </value>
                <value>
                    <fullName>Maheshwaran</fullName>
                </value>
                <value>
                    <fullName>Maheswaran</fullName>
                </value>
                <value>
                    <fullName>Manigandan.S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Area_Calls_Are__c</fullName>
        <label>Out of Area Calls Are:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Out_of_Area_Calls__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All the same area &amp; for your service</fullName>
                </value>
                <value>
                    <fullName>All the same area &amp; NOT for your service</fullName>
                </value>
                <value>
                    <fullName>All different areas &amp; for your service</fullName>
                </value>
                <value>
                    <fullName>All different areas &amp; NOT for your service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Area_Calls__c</fullName>
        <label>Out of Area Calls?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_Label__c</fullName>
        <label>Phone Number Label</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jingle</fullName>
                </value>
                <value>
                    <fullName>Ingenio</fullName>
                </value>
                <value>
                    <fullName>City Search</fullName>
                </value>
                <value>
                    <fullName>Google Mobile</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_1__c</fullName>
        <label>Reason 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Number: Business or Service Unrelated to Segment</fullName>
                </value>
                <value>
                    <fullName>Wrong Number: Business Related to Segment</fullName>
                </value>
                <value>
                    <fullName>Robo Calls</fullName>
                </value>
                <value>
                    <fullName>No Caller On The Line</fullName>
                </value>
                <value>
                    <fullName>Multiple Lines Same Issue</fullName>
                </value>
                <value>
                    <fullName>Multiple Lines Different Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unsupported Service but Related to Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_2__c</fullName>
        <label>Reason 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Number: Business or Service Unrelated to Segment</fullName>
                </value>
                <value>
                    <fullName>Wrong Number: Business Related to Segment</fullName>
                </value>
                <value>
                    <fullName>Robo Calls</fullName>
                </value>
                <value>
                    <fullName>No Call On The Line</fullName>
                </value>
                <value>
                    <fullName>Multiple Lines Same Issue</fullName>
                </value>
                <value>
                    <fullName>Multiple Lines Different Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unsupported Service but Related to Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitor_Calls__c</fullName>
        <label>Solicitor Calls?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Name_Label__c</fullName>
        <label>Tracking # Name/Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Jingle</fullName>
                </value>
                <value>
                    <fullName>Ingenio</fullName>
                </value>
                <value>
                    <fullName>Google Mobile</fullName>
                </value>
                <value>
                    <fullName>City Search</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrong_Business__c</fullName>
        <label>Wrong Business?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrong_Service__c</fullName>
        <label>Wrong Service?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Ops_Notes__c</fullName>
        <label>Close Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>To submit call quality concerns from clients to Marketing Ops team to review for potential paused distribution outlets.</description>
    <label>Call Quality Concern</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Call Quality Concern ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Quality Concerns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Client_ID__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LHMA_Post_Launch_Call_Quality_Concern</fullName>
        <filterScope>Queue</filterScope>
        <label>LHMA Post Launch</label>
        <queue>LHMA_Post_Launch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_Call_Quality_Concern</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WebDev_Call_Quality_Concern</fullName>
        <filterScope>Queue</filterScope>
        <label>Web Dev</label>
        <queue>WebDev</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Blacklist_Number_Must_Be_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT (ISBLANK( Numbers_to_be_blacklisted__c )),
NOT(ISNUMBER( Numbers_to_be_blacklisted__c )))</errorConditionFormula>
        <errorDisplayField>Numbers_to_be_blacklisted__c</errorDisplayField>
        <errorMessage>Only numbers should be entered into the Blacklist Number fields. Please edit accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blacklist_Number_Must_Be_only_11</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LEN( Numbers_to_be_blacklisted__c ) &gt;11, true, false)</errorConditionFormula>
        <errorDisplayField>Numbers_to_be_blacklisted__c</errorDisplayField>
        <errorMessage>Only numbers should be entered into the Blacklist Number fields. Please edit accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Escalated_Priority_Needs_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
Escalated__c=False,
Manager_Approved_Changes__c=False),
ISPICKVAL( Priority__c,"Escalated"))</errorConditionFormula>
        <errorMessage>Your manager must select "Manager Approved Changes" in order to escalate this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Notes_Required</fullName>
        <active>true</active>
        <description>You must enter the notes field if you select "multiple lines same issue", "multiple lines different issue"  or "Other".</description>
        <errorConditionFormula>and(
ISBLANK( Notes__c),
OR(
ISPICKVAL( Reason_1__c , "Multiple Lines Same Issue"),
ISPICKVAL( Reason_1__c , "Other"),
ISPICKVAL( Reason_1__c , "Multiple Lines Different Issue"),
ISPICKVAL( Reason_2__c , "Multiple Lines Same Issue"),
ISPICKVAL( Reason_2__c , "Other"),
ISPICKVAL( Reason_2__c , "Multiple Lines Different Issue")))</errorConditionFormula>
        <errorMessage>You must enter the notes field if you select "multiple lines same issue", "multiple lines different issue"  or "Other".</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solicitor_Calls_Opens_Numbers_Blacklist</fullName>
        <active>false</active>
        <description>When you select that the client is receiving solicitor calls, it opens the field for numbers to be blacklisted.</description>
        <errorConditionFormula>AND(ispickval(Solicitor_Calls__c,"Yes"),
isblank(Numbers_to_be_blacklisted__c))</errorConditionFormula>
        <errorMessage>You must enter numbers to be blacklisted when there have been solicitor calls.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tracking_Number_Must_Be_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER( Tracking_Number__c ))</errorConditionFormula>
        <errorDisplayField>Tracking_Number__c</errorDisplayField>
        <errorMessage>Only numbers should be entered into the Tracking Number fields. Please edit accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tracking_Number_Must_Be_only_11</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LEN( Tracking_Number__c ) &gt;11, true, false)</errorConditionFormula>
        <errorDisplayField>Tracking_Number__c</errorDisplayField>
        <errorMessage>Only numbers should be entered into the Tracking Number fields. Please edit accordingly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wrong_ServiceWrong_Business_Must_Enter</fullName>
        <active>true</active>
        <description>If you indicate that the clients are calling for one business, you must enter what business the callers are actually calling for.</description>
        <errorConditionFormula>and(
 ispickval (Calls_for_Wrong_Business__c , "Are Many of the Calls for the Same Business"),
isblank(Callers_are_Often_Calling_For__c ))</errorConditionFormula>
        <errorDisplayField>Callers_are_Often_Calling_For__c</errorDisplayField>
        <errorMessage>You must fill in Callers are Often Calling For if you indicate that many of the calls for the same business.</errorMessage>
    </validationRules>
</CustomObject>